examples/islower/klee-out-34/test000013.pc
array write_fail[4] : w32 -> w8 = symbolic
array model_version[4] : w32 -> w8 = symbolic
array inputccccccc[4] : w32 -> w8 = symbolic
(query [(Eq 1
            (ReadLSB w32 0 model_version))
        (Eq false
            (Sle (ReadLSB w32 0 inputccccccc)
                 39))
        (Eq false
            (Eq 1
                (ReadLSB w32 0 write_fail)))]
       false)
